@@ -69,11 +69,9 @@ $name = "network";
 $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-8.0", "redhat-9",
-              
-              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", 
-              
-              "debian-2.2", "debian-woody", "debian-sarge",
-              
+              "openna-1.0",              
+              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1",               
+              "debian-2.2", "debian-woody", "debian-sarge",              
               "suse-7.0", "turbolinux-7.0", "pld-1.0");
 
 $description =<<"end_of_description;";
