@@ -159,6 +159,7 @@ sub gst_network_get_broadcast_ping_cmd
        "redhat-7.2"   => "redhat-6.2",
        "redhat-8.0"   => "redhat-6.2",
        "redhat-9"     => "redhat-6.2",
+       "openna-1.0"   => "redhat-6.2",
        "debian-2.2"   => "debian-2.2",
        "debian-woody" => "debian-2.2",
        "debian-sarge" => "debian-2.2",
@@ -1067,6 +1068,7 @@ sub gst_network_get_file
 	  "redhat-7.2"   => \&gst_network_rh72_get_file,
     "redhat-8.0"   => \&gst_network_rh72_get_file,
     "redhat-9"     => \&gst_network_rh72_get_file,
+	  "openna-1.0"   => \&gst_network_rh62_get_file,
 	  "mandrake-7.2" => \&gst_network_rh62_get_file,
 		"mandrake-7.1" => \&gst_network_rh62_get_file,
 		"mandrake-9.0" => \&gst_network_rh62_get_file,
@@ -2122,6 +2124,7 @@ sub gst_network_ensure_loopback_interface
 	  "redhat-7.2"   => "lo",
     "redhat-8.0"   => "lo",
     "redhat-9"     => "",
+	  "openna-1.0"   => "lo",
 	  "mandrake-7.1" => "lo",
 	  "mandrake-7.2" => "lo",
 	  "mandrake-9.0" => "lo",
@@ -2225,6 +2228,7 @@ sub gst_network_get_parse_table
 	  "redhat-7.2"   => "redhat-7.2",
     "redhat-8.0"   => "redhat-7.2",
     "redhat-9"     => "redhat-7.2",
+	  "openna-1.0"   => "redhat-6.2",
 	  "mandrake-7.1" => "redhat-6.2",
 	  "mandrake-7.2" => "redhat-6.2",
     "mandrake-9.0" => "redhat-7.0",
@@ -2488,6 +2492,7 @@ sub gst_network_get_interface_parse_table
 	  "redhat-7.2"   => "redhat-7.2",
     "redhat-8.0"   => "redhat-7.2",
     "redhat-9"     => "redhat-7.2",
+	  "openna-1.0"   => "redhat-6.2",
 	  "mandrake-7.1" => "redhat-6.2",
     "mandrake-7.2" => "redhat-6.2",
     "mandrake-9.0" => "redhat-6.2",
