@@ -64,13 +64,10 @@ $name = "shares";
 $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2",
-
+              "openna-1.0",
               "mandrake-7.2",
-
               "debian-2.2", "debian-woody",
-
               "suse-7.0", "turbolinux-7.0");
-
 #              "freebsd-4", "freebsd-5");
 
 $description =<<"end_of_description;";
@@ -88,6 +85,7 @@ $platmap =
   "redhat-7.0"   => "redhat-7.0",
   "redhat-7.1"   => "redhat-7.0",
   "redhat-7.2"   => "redhat-7.0",
+  "openna-1.0"   => "redhat-7.0",
   "debian-2.2"   => "redhat-7.0",
   "debian-woody" => "redhat-7.0",
   "mandrake-7.2" => "redhat-7.0",
