@@ -62,15 +62,11 @@ $name = "time";
 $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
-              
+              "openna-1.0",
               "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1",
-              
               "debian-2.2", "debian-woody", "debian-sarge",
-
               "suse-7.0", "turbolinux-7.0",
-	      
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0",
-
               "gentoo", "pld-1.0");
 
 $description =<<"end_of_description;";
@@ -426,6 +422,7 @@ sub conf_get_parse_table
    "redhat-7.3"      => "redhat-7.0",
    "redhat-8.0"      => "redhat-7.0",
    "redhat-9"        => "redhat-7.0",
+   "openna-1.0"      => "redhat-7.0",
 
    "mandrake-7.1"    => "redhat-7.0",
    "mandrake-7.2"    => "redhat-7.0",
@@ -563,6 +560,7 @@ sub conf_get_replace_table
    "redhat-7.3"      => "redhat-7.0",
    "redhat-8.0"      => "redhat-7.0",
    "redhat-9"        => "redhat-7.0",
+   "openna-1.0"      => "redhat-7.0",
 
    "mandrake-7.1"    => "redhat-7.0",
    "mandrake-7.2"    => "redhat-7.0",
