@@ -70,6 +70,7 @@ $name = "users";
 $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
+              "openna-1.0",
               "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1",
               "debian-2.2", "debian-woody", "debian-sarge",
               "suse-7.0", "turbolinux-7.0",
@@ -232,6 +233,7 @@ my $logindefs_dist_map = {
   'redhat-7.3'      => $rh_logindefs_defaults,
   'redhat-8.0'      => $rh_logindefs_defaults,
   'redhat-9'        => $rh_logindefs_defaults,
+  'openna-1.0'      => $rh_logindefs_defaults,
   'mandrake-7.1'    => $rh_logindefs_defaults,
   'mandrake-7.2'    => $rh_logindefs_defaults,
   'mandrake-9.0'    => $rh_logindefs_defaults,
